--- a/frame/package.json
+++ b/frame/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "fullcalendar": "^3.9.0",
+    "jquery-timepicker": "^1.3.3",
+    "jquery-ui": "^1.12.1",
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-modal": "^3.4.5",
     "react-scripts": "1.1.4"
   },
   "scripts": {
